--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,7 @@
     </style>
 
 
+    <style name="SplashTheme" parent="Theme.CosmoNotes">
+        <item name="android:windowBackground">@drawable/splashscreen</item>
+    </style>
 </resources>
