--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/browser_actions_bg_grey"
+    android:background="@drawable/logincolor"
     tools:context=".MainActivity">
+
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/login_Button"
@@ -16,17 +17,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.817"
-        app:layout_editor_absoluteX="16dp" />
+        app:layout_editor_absoluteX="16dp"/>
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="198dp"
         android:layout_height="266dp"
+        android:contentDescription="@string/Desc_logo"
         app:layout_constraintBottom_toTopOf="@+id/login_Button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logoicono"
-        android:contentDescription="@string/Desc_logo" />
+        app:layout_constraintVertical_bias="0.903"
+        app:srcCompat="@drawable/logoicono" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:inputType="textMultiLine"
+        android:lineSpacingExtra="8sp"
+        android:text="Lleva tu organización \nal espacio"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="34sp"
+        android:textStyle="italic"
+        android:typeface="normal"
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.694" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
