--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,22 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/home"
-        android:icon="@drawable/common_google_signin_btn_icon_dark"
+        android:icon="@drawable/homeicon"
         android:title="Inicio"
-        app:cnb_iconColor="@color/design_default_color_primary"/>
+        app:cnb_textColor="@color/Morado"
+        app:cnb_backgroundColor="@color/light_azul"
+        app:cnb_iconColor="@color/Morado"/>
     <item
         android:id="@+id/Calendario"
-        android:icon="@drawable/common_google_signin_btn_icon_dark"
+        android:icon="@drawable/calendaricon"
         android:title="Calendario"
-        app:cnb_iconColor="@color/design_default_color_primary"/>
+        app:cnb_textColor="@color/Morado"
+        app:cnb_backgroundColor="@color/menu_amarillo"
+        app:cnb_iconColor="@color/Morado"/>/>
     <item
         android:id="@+id/Notas"
-        android:icon="@drawable/common_google_signin_btn_icon_dark_normal"
+        android:icon="@drawable/noteicon"
         android:title="Notas"
-        app:cnb_iconColor="@color/design_default_color_primary" />
+        app:cnb_textColor="@color/Morado"
+        app:cnb_backgroundColor="@color/menu_rojo"
+        app:cnb_iconColor="@color/Morado"/>/>
     <item
         android:id="@+id/Pendientes"
-        android:icon="@drawable/common_google_signin_btn_icon_light_focused"
+        android:icon="@drawable/todoicon"
         android:title="Pendientes"
-        app:cnb_iconColor="@color/design_default_color_primary" />
+        app:cnb_textColor="@color/Morado"
+        app:cnb_backgroundColor="@color/menu_lila"
+        app:cnb_iconColor="@color/Morado"/> />
 </menu>
