--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,8 +10,14 @@
 
     <!-- Colores usados en figma -->
     <color name="Morado">#29062E</color>
+    <color name="Light_Morado">#653AB9</color>
     <color name="light_bg">#F7F5F7</color>
     <color name="light_azul">#BADDFE</color>
-    <color name="weather_icon">#653AB9</color>
 
+    <color name="menu_amarillo">#f0ea9c</color>
+    <color name="icono_ficha_amarillo">#fde983</color>
+    <color name="menu_rojo">#ffc9c9</color>
+    <color name="icono_ficha_rojo">#ffa0a0</color>
+    <color name="menu_lila">#efd4fb</color>
+    <color name="icono_ficha_lila">#d066ff</color>
 </resources>
